[package]
name = "fliteplay"
version = "0.1.0"
authors = ["John Chadwick <john@jchw.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-slice-cast = "1.0.0"
fluidlite = "0.1.3"
redoxsynth = { path = "./redoxsynth" }

[workspace]
members = [
    "redoxsynth",
]
