[package]
name = "redoxsynth"
version = "0.1.0"
authors = ["John Chadwick <john@jchw.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.81"
bitflags = "^1.2"
num-traits = "^0.2"
num-derive = "^0.3"
byte-slice-cast = "^0.3"
lazy_static = "1.4.0"
